--- a/package.json
+++ b/package.json
@@ -44,9 +44,9 @@
     "babel-loader": "^8.0.4",
     "base64-loader": "1.0.0",
     "bowser": "1.9.4",
-    "chromedriver": "76.0.0",
+    "chromedriver": "77.0.0",
     "classnames": "2.2.6",
-    "codemirror": "^5.48.2",
+    "codemirror": "^5.49.0",
     "computed-style-to-inline-style": "3.0.0",
     "copy-webpack-plugin": "^4.5.1",
     "core-js": "2.5.7",
@@ -68,6 +68,7 @@
     "immutable": "3.8.2",
     "intl": "1.2.5",
     "jest": "^21.0.0",
+    "jest-junit": "^7.0.0",
     "js-base64": "2.4.9",
     "keymirror": "0.1.1",
     "lodash.bindall": "4.4.0",
@@ -107,12 +108,12 @@
     "redux-mock-store": "^1.2.3",
     "redux-throttle": "0.1.1",
     "rimraf": "^2.6.1",
-    "scratch-audio": "0.1.0-prerelease.20190114210212",
-    "scratch-l10n": "3.5.20190813223429",
-    "scratch-paint": "0.2.0-prerelease.20190807143414",
-    "scratch-render": "0.1.0-prerelease.20190813154945",
+    "scratch-audio": "0.1.0-prerelease.20190925183642",
+    "scratch-l10n": "3.6.20191008224547",
+    "scratch-paint": "0.2.0-prerelease.20191010161144",
+    "scratch-render": "0.1.0-prerelease.20191001200908",
     "scratch-storage": "1.3.2",
-    "scratch-svg-renderer": "0.2.0-prerelease.20190715153806",
+    "scratch-svg-renderer": "0.2.0-prerelease.20190822202608",
     "selenium-webdriver": "3.6.0",
     "startaudiocontext": "1.2.1",
     "style-loader": "^0.23.0",
